--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <title>ThreeJS</title>
   <link type="text/css" rel="stylesheet" href="./css.css" />
   <script lang="text/javascript" src="./three.js"></script>
+  <script lang="text/javascript" src="./main.js"></script>
   <script lang="text/javascript" src="./myGL.js"></script>
+  <script lang="text/javascript" src="./events.js"></script>
   <script lang="text/javascript" src="./AJAX.js"></script>
 </head>
 <body onload="onload();">
