--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <title>ThreeJS</title>
   <link type="text/css" rel="stylesheet" href="./css.css" />
   <script lang="text/javascript" src="./three.js"></script>
+  <script lang="text/javascript" src="./ReplayLoader.js"></script>
+  <script lang="text/javascript" src="./ReplayWindow.js"></script>
   <script lang="text/javascript" src="./main.js"></script>
-  <script lang="text/javascript" src="./myGL.js"></script>
-  <script lang="text/javascript" src="./events.js"></script>
-  <script lang="text/javascript" src="./AJAX.js"></script>
+  <script lang="text/javascript">
+	 function onload() {
+		 var div = document.getElementById('scene');
+		 showReplay(div, "./log.replay.json", null);
+	 }	 
+  </script>
 </head>
 <body onload="onload();">
   <div id="scene" style="width: 100%; height: 100%;"></div>
