--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <script lang="text/javascript" src="script/three.js"></script>
   <script lang="text/javascript" src="script/ReplayLoader.js"></script>
   <script lang="text/javascript" src="script/ReplayWindow.js"></script>
-  <script lang="text/javascript" src="script/main.js"></script>
+  <script lang="text/javascript" src="script/showReplay.js"></script>
   <script lang="text/javascript">
 	 function onload() {
 		 var div = document.getElementById('scene');
-		 showReplay(div, "./log.replay.json", null);
+		 showReplay(div, "./log.replay.json");
 	 }	 
   </script>
 </head>
 <body onload="onload();">
-  <div id="scene" style="width: 100%; height: 100%;"></div>
+  <div id="scene" style="width: 100%; height: 100%;" class="noselect"></div>
 </body>
 </html>
