--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script lang="text/javascript">
 	 function onload() {
 		 var div = document.getElementById('scene');
-		 showReplay(div, "./log.replay.json");
+		 showReplay(div, "./log.replay.json", 0); // 0 - не обязательно
 	 }	 
   </script>
 </head>
