--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   </script>
 </head>
 <body onload="onload();">
-  <div id="scene" style="width: 100%; height: 100%;" class="noselect"></div>
+  <div id="scene" style="width: 800px; height: 300px; position: relative;" class="noselect"></div>
 </body>
 </html>
